# simplicity-contracts

./: Cargo.toml
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/contracts/src/array_tr_storage/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/array_tr_storage/source_simf/: array_tr_storage.simf
crates/contracts/src/cmr_storage/: build_witness.rs  mod.rs
crates/contracts/src/cmr_storage/source_simf/: cmr_storage.simf
crates/contracts/src/smt_storage/: build_witness.rs  mod.rs  smt.rs
crates/contracts/src/smt_storage/source_simf/: smt_storage.simf
crates/contracts/src/storage_inc/: build_witness.rs  mod.rs
crates/contracts/src/unlimited_storage/: build_arguments.rs  build_witness.rs  mod.rs
crates/contracts/src/unlimited_storage/source_simf/: array.simf  unlimited_storage_with_arrays.simf
